<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_background"
    android:orientation="vertical" >

  <EditText
      android:id="@+id/editText1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textMultiLine"
      android:onClick="@raw/1"
      android:text="@string/chapter_1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/2"
        android:text="@string/chapter_2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/3"
        android:text="@string/chapter_3" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/4"
        android:text="@string/chapter_4" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/5"
        android:text="@string/chapter_5" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/6"
        android:text="@string/chapter_6" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/7"
        android:text="@string/chapter_7" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/8"
        android:text="@string/chapter_8" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/9"
        android:text="@string/chapter_9" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/10"
        android:text="@string/chapter_10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/11"
        android:text="@string/chapter_11" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/12"
        android:text="@string/chapter_12" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/13"
        android:text="@string/chapter_13" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/14"
        android:text="@string/chapter_14" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/15"
        android:text="@string/chapter_15" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/16"
        android:text="@string/chapter_16" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/17"
        android:text="@string/chapter_17" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:onClick="@raw/18"
        android:text="@string/chapter_18" />

</LinearLayout>